epochX/cudacpp/tput/logs_smeftggtttt_mad/log_smeftggtttt_mad_m_inl0_hrd1.txt

Building in /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx
BACKEND=cppavx2 (was cppauto)
OMPFLAGS=
FPTYPE='d'
HELINL='0'
HRDCOD='0'
HASCURAND=hasNoCurand
HASHIPRAND=hasNoHiprand
Building in BUILDDIR=build.auto_d_inl0_hrd0 for tag=avx2_d_inl0_hrd0_hasNoCurand_hasNoHiprand (USEBUILDDIR == 1)
make: Nothing to be done for 'gtestlibs'.
make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

DATE: 2024-09-17_09:25:57

On uan01 [CPU: AMD EPYC 7A53 64-Core Processor] [GPU: AMD INSTINCT MI200]:
=========================================================================
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/check_hip.exe -p 1 256 2 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/check_hip.exe: Floating point exception
       944,021,735      cycles:u                         #    2.642 GHz                      (75.58%)
         2,477,735      stalled-cycles-frontend:u        #    0.26% frontend cycles idle     (72.94%)
         6,413,288      stalled-cycles-backend:u         #    0.68% backend cycles idle      (71.73%)
     1,495,341,386      instructions:u                   #    1.58  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (74.19%)
       0.395987038 seconds time elapsed
.........................................................................
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/check_hip.exe -p 64 256 1 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/check_hip.exe: Floating point exception
     1,167,852,448      cycles:u                         #    2.766 GHz                      (75.01%)
         2,310,511      stalled-cycles-frontend:u        #    0.20% frontend cycles idle     (75.65%)
         5,844,521      stalled-cycles-backend:u         #    0.50% backend cycles idle      (75.26%)
     1,703,248,077      instructions:u                   #    1.46  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (73.13%)
       0.458560013 seconds time elapsed
-------------------------------------------------------------------------
runTest /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/runTest_hip.exe
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
[  PASSED  ] 4 tests.
DEBUG: MEK (no multichannel) processed 512 events across 72 channels { no-multichannel : 512 }
INFO: No Floating Point Exceptions have been reported
DEBUG: MEK (channelid array) processed 512 events across 72 channels { 1 : 32, 2 : 32, 3 : 32, 4 : 32, 5 : 32, 6 : 32, 7 : 32, 8 : 32, 9 : 32, 10 : 32, 11 : 32, 12 : 32, 13 : 32, 14 : 32, 15 : 32, 16 : 32 }
INFO: No Floating Point Exceptions have been reported
-------------------------------------------------------------------------
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/check_hip.exe --common -p 2 64 2
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/smeft_gg_tttt.mad/SubProcesses/P1_gg_ttxttx/build.hip_m_inl0_hrd1/fcheck_hip.exe 2 64 2
Avg ME (C++/GPU)   = 
Avg ME (F77/GPU)   = 8.1274562879405183E-006
  File "<string>", line 1
    me1=; me2=8.1274562879405183E-006; reldif=abs((me2-me1)/me1); print('Relative difference =', reldif); ok = reldif <= 5E-3; print ( '%s (relative difference %s 5E-3)' % ( ('OK','<=') if ok else ('ERROR','>') ) )
        ^
SyntaxError: invalid syntax
